# agentflow

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  WORK.md  package.json  setup.cfg
.agentflow/: approvals.jsonl  repository-profile.json
.agentflow/work/: graph.jsonl  roadmap.jsonl
docs/: README.md  roadmap.md
docs/adr/: 0004-separate-workflow-semantics-from-agent-adapters.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: external-validation.md  product-contract.md  run-kernel.md
docs/decisions/: agentflow-factory.md
examples/: task.json
skills/agentflow/: SKILL.md
tests/: test_abandon_command.py  test_adopt_command.py  test_advance_command.py  test_amend_plan_command.py  test_approve_command.py  test_contracts.py  test_deploy_command.py  test_evidence_committability.py  test_external_validation.py  test_improvement_proposals.py  test_init_command.py  test_init_conventions_and_hooks.py  test_list_command.py  test_merge_command.py  test_models_command.py  test_npx_installer.py  test_post_merge_verification.py  test_profile_command.py  test_projection.py  test_proposals_inbox.py  test_propose_command.py  test_rebase_command.py  test_reconcile_command.py  test_reject_command.py  test_reviewer_eval.py  test_reviewer_eval_strengthening.py  test_run_command.py  test_stage_claims.py  test_start_command.py  test_status_command.py  test_watch_command.py  test_web_ui.py  test_work_approve_command.py  test_work_drift_command.py  test_work_graph.py  test_work_md_mirror.py  test_work_reconcile_command.py  test_work_verify_command.py
(+41 files in other folders)
