[metadata]
name = agentflow
version = 0.1.0
description = A deterministic control plane for agent-assisted engineering workflows
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

[options.package_data]
agentflow =
    eval_fixtures/improvement/*.json
    hooks/*

[options.entry_points]
console_scripts =
    agentflow = agentflow.__main__:main
